--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MobileChallenge</string>
+    <string name="products">Produtos</string>
+    <string name="digio">digio</string>
+    <string name="cash">Cash</string>
 </resources>
